--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,12 @@
-docker-compose.yml
+version: '3'
+
+services:
+  backend:
+    build: ./backend
+    ports:
+      - '3000:3000'
+
+  frontend:
+    build: ./frontend
+    ports:
+      - '80:80'
